# gdp_vol

./: README.md  pyproject.toml
docs/: architecture.md  paper.md
examples/: metrics.ipynb  query_fred.ipynb  regression.ipynb  transform_data.ipynb
src/data_loading/: base.py  loaders.py
src/data_transformation/: transformer.py
src/metrics/: volatility.py
src/regression/: ols_regressor.py  var_regressor.py
src/utilities/: timeseries.py
tests/: __init__.py  conftest.py  test_data_loading.py  test_data_transformation.py  test_metrics.py  test_regression.py
